--- a/src/components/styles/SearchBar.css
+++ b/src/components/styles/SearchBar.css
@@ -1,7 +1,8 @@
-.form-control{
+.form-control,.form-control:focus{
     background-color: rgb(2, 0, 31);
     border-radius: 10px;
-border: none;
+border: none !important;
+color: white;
 }
 .searchbar
 {
@@ -9,10 +10,12 @@ border: none;
     border-radius: 10px;
 filter: drop-shadow(5px 5px 5px black);
 margin-top: 10px;
+color: white;
 }
-.form-control::placeholder
+
+.form-control::placeholder,.form-control::content
 {
-    color: rgb(186, 186, 186);
+    color: rgb(186, 186, 186) !important;
     font-weight: 200;
 }
 .input-group-text
