--- a/src/components/styles/WeatherImage.css
+++ b/src/components/styles/WeatherImage.css
@@ -1,3 +1,9 @@
 .weather-image img{
     width: 100%;
 }
+@media screen and (min-width:1120px) {
+    .weather-image img{
+        width: 80%;
+        height: auto;
+    }
+}
