--- a/src/components/styles/SearchBar.css
+++ b/src/components/styles/SearchBar.css
@@ -1,16 +1,17 @@
 .form-control,.form-control:focus{
-    background-color: rgb(2, 0, 31);
+    background-color: rgb(255, 255, 255);
     border-radius: 10px;
 border: none !important;
-color: white;
+color: rgb(0, 0, 0);
 }
 .searchbar
 {
-    background-color: rgb(2, 0, 31);
+    background-color: rgb(255, 255, 255);
     border-radius: 10px;
 filter: drop-shadow(5px 5px 5px black);
 margin-top: 10px;
-color: white;
+color: rgb(0, 0, 0);
+border: 2px solid rgb(14, 0, 71);
 }
 
 .form-control::placeholder,.form-control::content
@@ -20,8 +21,8 @@ color: white;
 }
 .input-group-text
 {
-    background-color: rgb(2, 0, 31);
-    color: white;
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     border: none;
 }
 .searchbar
